--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title>Your personal website</title>
+  <title>Tin Aung</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -96,12 +96,14 @@
             <div class="mb-4">
               <p>
                 Who you are
+                I am a Navy veteran (2014 - 2019) and currently a student at the University of San Diego.
               </p>
               <p>
                 Professional info
               </p>
               <p>
                 Hobbies
+                I enjoy playing video games, reading, and watching movies.
               </p>
 
 
@@ -174,14 +176,14 @@
           <div class="col-md-12 text-center">
             <p class="mb-0">
               <span class="icon-mail_outline d-block h4 text-primary"></span>
-              <span>email address</span>
+              <span>tinmoaung@icloud.com</span>
             </p>
           </div>
 
           <div class="col-md-12 text-center">
             <p class="mb-0">
               <span class="icon-graduation-cap d-block h4 text-primary"></span>
-              <a href="">Resume</a>
+              <a href=resources/Tin_Aung_Resume.pdf>Resume</a>
             </p>
           </div>
         </div>
