--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <div class="col-md-12 text-center">
             <p class="mb-0">
               <span class="icon-graduation-cap d-block h4 text-primary"></span>
-              <a href=resources/Tin_Aung_Resume.pdf>Resume</a>
+              <a href=resources/Tin_Aung_Resume.pdf target="_blank">Resume</a>
             </p>
           </div>
         </div>
