update about me section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
             <div class="mb-4">
               <p>
-                Who you are
+                Who I am
+              </p>
+              <p>
                 I am a Navy veteran (2014 - 2019) and currently a student at the University of San Diego.
               </p>
               <p>
@@ -103,6 +105,8 @@
               </p>
               <p>
                 Hobbies
+              </p>
+              <p>
                 I enjoy playing video games, reading, and watching movies.
               </p>
 
