updated project info section

--- a/index.html
+++ b/index.html
@@ -94,18 +94,18 @@
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
             <div class="mb-4">
-              <p>
+              <h3>
                 Who I am
-              </p>
+              </h3>
               <p>
                 I am a Navy veteran (2014 - 2019) and currently a student at the University of San Diego.
               </p>
-              <p>
+              <h3>
                 Professional info
-              </p>
-              <p>
+              </h3>
+              <h3>
                 Hobbies
-              </p>
+              </h3>
               <p>
                 I enjoy playing video games, reading, and watching movies.
               </p>
@@ -137,12 +137,20 @@
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
             <div class="mb-4">
-              <h3>Project Title</h3>
+              <h3>Banking System</h3>
               <p>
                 Motivation of the project
               </p>
               <p>
+                We wanted to create a simple banking system that encapsulates the basic functions of a bank using all
+                pillars of OOP.
+              </p>
+              <p>
                 Functional requirements/what the project does
+              </p>
+              <p>
+                The project allows users to create accounts, deposit money, withdraw money, and transfer money between
+                accounts.
               </p>
               <p>
                 Project design
