modified professional info

--- a/index.html
+++ b/index.html
@@ -94,18 +94,22 @@
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
             <div class="mb-4">
-              <h3>
+              <h2>
                 Who I am
-              </h3>
+              </h2>
               <p>
                 I am a Navy veteran (2014 - 2019) and currently a student at the University of San Diego.
               </p>
-              <h3>
+              <h2>
                 Professional info
-              </h3>
-              <h3>
+              </h2>
+              <p>
+                I am a Computer Science major with a minor in Mathematics. I am interested in Cybersecurity for my
+                masters.
+              </p>
+              <h2>
                 Hobbies
-              </h3>
+              </h2>
               <p>
                 I enjoy playing video games, reading, and watching movies.
               </p>
