modified some info in project section

--- a/index.html
+++ b/index.html
@@ -159,9 +159,15 @@
               <h2>
                 Project design
               </h2>
+              <p>
+                The project is designed using all pillars of OOP.
+              </p>
               <h2>
                 Implementation
               </h2>
+              <p>
+                The project is implemented using Java.
+              </p>
 
 
             </div>
