--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <div class="col-md-12 text-center">
             <p class="mb-0">
               <span class="icon-mail_outline d-block h4 text-primary"></span>
-              <span>tinmoaung@icloud.com</span>
+              <span> <a href="tinmoaung@icloud.com"></a></span>
             </p>
           </div>
 
