--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
             <div class="mb-4">
               <h1>
-                Who I am
+                Who I Am
               </h1>
               <p>
                 I am a Navy veteran (2014 - 2019) and currently a student at the University of San Diego.
               </p>
               <h1>
-                Professional info
+                Professional Info
               </h1>
               <p>
                 I am a Computer Science major with a minor in Mathematics. I am interested in Cybersecurity for my
@@ -136,7 +136,7 @@
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
 
-            <img src="" alt="Image of your project" class="img-fluid">
+            <img src="images/BankingSystemUML.png" alt="Image of your project" class="img-fluid">
 
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
@@ -145,28 +145,53 @@
               <h2>
                 Motivation of the project
               </h2>
+
               <p>
-                We wanted to create a simple banking system that encapsulates the basic functions of a bank using all
-                pillars of OOP.
+                The motivation for creating this banking system is to simulate a real-world banking environment in a
+                simplified manner.
+                The system is designed to handle basic banking operations such as account creation, deposits,
+                withdrawals, and
+                transfers. It includes classes to represent key entities such as the bank, customers, and different
+                types of accounts.
               </p>
+
               <h2>
                 Functional requirements/what the project does
               </h2>
+
               <p>
-                The project allows users to create accounts, deposit money, withdraw money, and transfer money between
-                accounts.
+                The `Bank` class manages customers and generates unique IDs for customers and accounts. The
+                `BankCustomer` class
+                represents a customer with multiple accounts and the ability to create checking and savings accounts.
+                The `BankAccount`
+                class, an abstract class implementing the `Account` interface, provides a blueprint for different types
+                of accounts,
+                including methods for depositing, withdrawing, and transferring funds.
                 </h2>
               <h2>
-                Project design
+                Project Design
               </h2>
               <p>
-                The project is designed using all pillars of OOP.
+                The banking system project, written in Java and built with Gradle, applies the four pillars of
+                object-oriented
+                programming. It uses abstraction in the `Account` interface, encapsulation in the `BankAccount` and
+                `BankCustomer`
+                classes, inheritance in the `CheckingAccount` and `SavingsAccount` classes, and polymorphism through the
+                `Account`
+                interface. The project is developed feature by feature, with each feature being reviewed and revised
+                based on partner
+                feedback. The complexity of the project lies in its various features, such as account creation,
+                deposits, withdrawals,
+                transfers, and customer and ID management. The project is not a simple task, nor a minor tweak of a
+                previous project,
+                but a comprehensive banking system that applies the concepts learned throughout the semester.
               </p>
+
               <h2>
                 Implementation
               </h2>
               <p>
-                The project is implemented using Java.
+                I implemented the Bank class, BankCustomer class, Customer interface, and the BankSimulation class.
               </p>
 
 
