modified html file in project section.

--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
             <div class="mb-4">
-              <h1>Banking System</h1>
+              <h1>Title: Banking System</h1>
+
               <h2>
                 Motivation of the project
               </h2>
