--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
 
-            <img src="images/BankingSystemUML.png" alt="Image of your project" class="img-fluid">
+            <img src="images/BankingSystemUML.png" alt="Image of your project" class="img-fluid"
+              style="width:100%; height:auto;">
 
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
