changed header color to green

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
             <div class="mb-4">
-              <h1>Title: Banking System</h1>
+              <h1 style="color:green;">Title: Banking System</h1>
 
-              <h3>
+              <h3 style="color:green;">
                 Motivation of the project
               </h3>
 
@@ -157,7 +157,7 @@
                 types of accounts.
               </p>
 
-              <h3>
+              <h3 style="color:green;">
                 Functional requirements/what the project does
               </h3>
 
@@ -171,7 +171,7 @@
                 including methods for depositing, withdrawing, and transferring funds.
               </p>
 
-              <h3>
+              <h3 style="color:green;">
                 Project Design
               </h3>
 
@@ -191,7 +191,7 @@
                 but a comprehensive banking system that applies the concepts learned throughout the semester.
               </p>
 
-              <h3>
+              <h3 style="color:green;">
                 Implementation
               </h3>
               <p>
