changed colors of titles and headers

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title>Tin Aung</title>
+  <title style="color:maroon;">Tin Aung</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -65,9 +65,9 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li><a href="#about-section" class="nav-link">About</a></li>
-                <li><a href="#projects-section" class="nav-link">Projects</a></li>
-                <li><a href="#contact-section" class="nav-link">Contact</a></li>
+                <li style="color:maroon;"><a href="#about-section" class="nav-link">About</a></li>
+                <li style="color:maroon;"><a href="#projects-section" class="nav-link">Projects</a></li>
+                <li style="color:maroon;"><a href="#contact-section" class="nav-link">Contact</a></li>
               </ul>
             </nav>
           </div>
@@ -94,20 +94,20 @@
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
             <div class="mb-4">
-              <h1>
+              <h1 style="color:maroon">
                 Who I Am
               </h1>
               <p>
                 I am a Navy veteran (2014 - 2019) and currently a student at the University of San Diego.
               </p>
-              <h1>
+              <h1 style="color:maroon;">
                 Professional Info
               </h1>
               <p>
                 I am a Computer Science major with a minor in Mathematics. I am interested in Cybersecurity for my
                 masters.
               </p>
-              <h1>
+              <h1 style="color:maroon;">
                 Hobbies
               </h1>
               <p>
@@ -143,6 +143,7 @@
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
             <div class="mb-4">
               <h1 style="color:green;">Title: Banking System</h1>
+              <p></p>
 
               <h3 style="color:green;">
                 Motivation of the project
