changed header colors

--- a/index.html
+++ b/index.html
@@ -65,16 +65,17 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li style="color:maroon;"><a href="#about-section" class="nav-link">About</a></li>
-                <li style="color:maroon;"><a href="#projects-section" class="nav-link">Projects</a></li>
-                <li style="color:maroon;"><a href="#contact-section" class="nav-link">Contact</a></li>
+                <li><a href="#about-section" class="nav-link" style="color:maroon;">About</a></li>
+                <li><a href="#projects-section" class="nav-link" style="color:maroon;">Projects</a></li>
+                <li><a href="#contact-section" class="nav-link" style="color:maroon;"">Contact</a></li>
               </ul>
             </nav>
           </div>
 
 
-          <div class="col-6 d-inline-block d-xl-none ml-md-0 py-3" style="position: relative; top: 3px;"><a href="#"
-              class="site-menu-toggle js-menu-toggle float-right"><span class="icon-menu h3"></span></a></div>
+          <div class=" col-6 d-inline-block d-xl-none ml-md-0 py-3" style="position: relative; top: 3px;"><a href="#"
+                      class="site-menu-toggle js-menu-toggle float-right"><span class="icon-menu h3"></span></a>
+          </div>
 
         </div>
       </div>
@@ -143,7 +144,9 @@
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
             <div class="mb-4">
               <h1 style="color:green;">Title: Banking System</h1>
-              <p></p>
+              <p>
+
+              </p>
 
               <h3 style="color:green;">
                 Motivation of the project
