changed colors of paragraphs

--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li><a href="#about-section" class="nav-link" style="color:maroon;">About</a></li>
-                <li><a href="#projects-section" class="nav-link" style="color:maroon;">Projects</a></li>
-                <li><a href="#contact-section" class="nav-link" style="color:maroon;"">Contact</a></li>
+                <li><a href="#about-section" class="nav-link">About</a></li>
+                <li><a href="#projects-section" class="nav-link">Projects</a></li>
+                <li><a href="#contact-section" class="nav-link">Contact</a></li>
               </ul>
             </nav>
           </div>
 
 
           <div class=" col-6 d-inline-block d-xl-none ml-md-0 py-3" style="position: relative; top: 3px;"><a href="#"
-                      class="site-menu-toggle js-menu-toggle float-right"><span class="icon-menu h3"></span></a>
+              class="site-menu-toggle js-menu-toggle float-right"><span class="icon-menu h3"></span></a>
           </div>
 
         </div>
@@ -98,20 +98,20 @@
               <h1 style="color:maroon">
                 Who I Am
               </h1>
-              <p>
+              <p style="color:blueviolet;">
                 I am a Navy veteran (2014 - 2019) and currently a student at the University of San Diego.
               </p>
               <h1 style="color:maroon;">
                 Professional Info
               </h1>
-              <p>
+              <p style="color:blueviolet;">
                 I am a Computer Science major with a minor in Mathematics. I am interested in Cybersecurity for my
                 masters.
               </p>
               <h1 style="color:maroon;">
                 Hobbies
               </h1>
-              <p>
+              <p style="color:blueviolet;">
                 I enjoy playing video games, reading, and watching movies.
               </p>
 
@@ -152,7 +152,7 @@
                 Motivation of the project
               </h3>
 
-              <p>
+              <p style="color:rgb(129, 215, 0)">
                 The motivation for creating this banking system is to simulate a real-world banking environment in a
                 simplified manner.
                 The system is designed to handle basic banking operations such as account creation, deposits,
@@ -165,7 +165,7 @@
                 Functional requirements/what the project does
               </h3>
 
-              <p>
+              <p style="color:rgb(129, 215, 0)">
                 The `Bank` class manages customers and generates unique IDs for customers and accounts. The
                 `BankCustomer` class
                 represents a customer with multiple accounts and the ability to create checking and savings accounts.
@@ -179,7 +179,7 @@
                 Project Design
               </h3>
 
-              <p>
+              <p style="color:rgb(129, 215, 0)">
                 The banking system project, written in Java and built with Gradle, applies the four pillars of
                 object-oriented
                 programming. It uses abstraction in the `Account` interface, encapsulation in the `BankAccount` and
@@ -198,7 +198,7 @@
               <h3 style="color:green;">
                 Implementation
               </h3>
-              <p>
+              <p style="color:rgb(129, 215, 0)">
                 I implemented the Bank class, BankCustomer class, Customer interface, and the BankSimulation class.
               </p>
 
