--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 </head>
 
-<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300" style="background-color:burlywood">
 
 
   <div id="overlayer"></div>
