--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 Motivation of the project
               </h3>
 
-              <p style="color:rgb(129, 215, 0)">
+              <p style="color:black">
                 The motivation for creating this banking system is to simulate a real-world banking environment in a
                 simplified manner.
                 The system is designed to handle basic banking operations such as account creation, deposits,
@@ -165,7 +165,7 @@
                 Functional requirements/what the project does
               </h3>
 
-              <p style="color:rgb(129, 215, 0)">
+              <p style="color:black">
                 The `Bank` class manages customers and generates unique IDs for customers and accounts. The
                 `BankCustomer` class
                 represents a customer with multiple accounts and the ability to create checking and savings accounts.
@@ -179,7 +179,7 @@
                 Project Design
               </h3>
 
-              <p style="color:rgb(129, 215, 0)">
+              <p style="color:black">
                 The banking system project, written in Java and built with Gradle, applies the four pillars of
                 object-oriented
                 programming. It uses abstraction in the `Account` interface, encapsulation in the `BankAccount` and
@@ -198,7 +198,7 @@
               <h3 style="color:green;">
                 Implementation
               </h3>
-              <p style="color:rgb(129, 215, 0)">
+              <p style="color:black">
                 I implemented the Bank class, BankCustomer class, Customer interface, and the BankSimulation class.
               </p>
 
